[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/sprites/drone_droid_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://src/enemies/FlyingDroid/FlyingDroid.gd" type="Script" id=2]
[ext_resource path="res://src/collisions/Detection.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/collisions/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/collisions/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/menus/Indicators/HealthBar/HealthBar.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 10, 14 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 18, 17, 16, 15, 14, 13, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, -6 ), Vector2( -1.88235, -8.5872 ), Vector2( -1.76471, -9.9018 ), Vector2( 0.352941, 17.2837 ), Vector2( 0.248366, 21.3581 ), Vector2( 0.143791, 17.9325 ), Vector2( -0.588235, 17.9531 ), Vector2( -0.470588, 17.7825 ), Vector2( -0.352941, 17.4581 ), Vector2( -0.235294, 18.0622 ), Vector2( -0.117647, 20.7331 ), Vector2( 0, 14.9664 ), Vector2( -2, -10.4474 ), Vector2( -2, -8.75 ), Vector2( -2, -9 ), Vector2( -2, -2 ), Vector2( -2, -2 ), Vector2( -2, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -11 ), Vector2( -2, -12 ), Vector2( -2, -12.9545 ), Vector2( 0, 16.1385 ), Vector2( -0.1, 22.7816 ), Vector2( -0.2, 20.0036 ), Vector2( -0.3, 22.2812 ), Vector2( -0.5, 21.3658 ), Vector2( 1.4, 22.208 ), Vector2( 1.15714, 23.836 ), Vector2( 0.914286, 21.1563 ), Vector2( -0.328572, 20.4767 ), Vector2( -0.48052, 17.6151 ), Vector2( 0.367532, 19.7536 ), Vector2( 0.104473, 18.3366 ), Vector2( -0.158586, 19.6695 ), Vector2( -0.421645, 15.2881 ), Vector2( -1.6847, -13.0932 ), Vector2( -1.74776, -11.6746 ), Vector2( -1.93694, -5.16865 ), Vector2( -2, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBox/CollisionShape2D:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 3.0, 15.0, 25.0, 30.0, 30.0, 60.0, 56.8333, 3.0, 60.0, 3.0, 40.0, 3.0, 3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 30 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, -5 ), Vector2( -2, -11 ), Vector2( -2, -12 ), Vector2( -2, -13 ), Vector2( -1, 15 ), Vector2( 1, 19 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=6]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Damage"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Move"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Wake"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=19]
states/Attack/node = SubResource( 7 )
states/Attack/position = Vector2( 710, 107 )
states/Damage/node = SubResource( 8 )
states/Damage/position = Vector2( 492, 230 )
states/Death/node = SubResource( 9 )
states/Death/position = Vector2( 692, 286 )
states/Move/node = SubResource( 10 )
states/Move/position = Vector2( 492, 107 )
states/Wake/node = SubResource( 11 )
states/Wake/position = Vector2( 292, 107 )
transitions = [ "Wake", "Move", SubResource( 12 ), "Move", "Damage", SubResource( 13 ), "Move", "Attack", SubResource( 14 ), "Attack", "Move", SubResource( 16 ), "Damage", "Death", SubResource( 17 ), "Move", "Wake", SubResource( 18 ), "Attack", "Damage", SubResource( 25 ), "Damage", "Wake", SubResource( 27 ) ]
start_node = "Wake"
end_node = "Death"
graph_offset = Vector2( -41, 84 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="Animation" id=21]
resource_name = "Damage"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=26]
resource_name = "NoEffects"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 60, 40 )

[sub_resource type="CircleShape2D" id=23]

[sub_resource type="CapsuleShape2D" id=24]
height = 3.0

[node name="FloatingDroid" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 0 )
texture = ExtResource( 1 )
vframes = 42
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -6 )
shape = SubResource( 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Damage = SubResource( 3 )
anims/Death = SubResource( 4 )
anims/Move = SubResource( 5 )
anims/Wake = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 20 )

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 21 )
anims/NoEffects = SubResource( 26 )

[node name="Detection" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="Detection" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 22 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -2, -4 )
shape = SubResource( 23 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -2, -11 )
rotation = 1.57079
shape = SubResource( 24 )

[node name="Timers" type="Node" parent="."]

[node name="MoveTimer" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="HitTimer" type="Timer" parent="Timers"]

[node name="ChargeTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 2.3
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource( 7 )]
margin_left = -17.0
margin_top = -29.0
margin_right = 13.0
margin_bottom = -26.0
[connection signal="on_health_updated" from="." to="HealthBar" method="_on_health_updated"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Timers/MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="Timers/ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="Detection"]

[editable path="HurtBox"]

[editable path="HitBox"]
